--- a/locales/de.json
+++ b/locales/de.json
@@ -633,6 +633,49 @@
       "redFlags": "Rote Flaggen",
       "greenFlags": "Grüne Flaggen",
       "switzerland": "Schweiz"
+    },
+    "patternTranslations": {
+      "incorrect consent mode v2": "Consent Mode v2 fehlerhaft",
+      "tracking before consent": "Tracking vor Einwilligung",
+      "analytics before consent": "Analytics vor Einwilligung",
+      "missing reject option": "Fehlende Ablehnen‑Option",
+      "no equal prominence": "Keine gleichwertige Hervorhebung",
+      "no reject-all button": "Kein Alles‑ablehnen‑Button",
+      "dark patterns in consent ui": "Dark Patterns in der Consent‑UI",
+      "dark patterns": "Dark Patterns",
+      "incomplete policy links": "Unvollständige Richtlinien‑Links",
+      "incomplete vendor disclosures": "Unvollständige Anbieter‑Informationen",
+      "improper legitimate interest": "Unzulässiges berechtigtes Interesse"
+    },
+    "countryLabels": {
+      "AUT": "Österreich",
+      "BEL": "Belgien",
+      "BGR": "Bulgarien",
+      "HRV": "Kroatien",
+      "CYP": "Zypern",
+      "CZE": "Tschechien",
+      "DNK": "Dänemark",
+      "EST": "Estland",
+      "FIN": "Finnland",
+      "FRA": "Frankreich",
+      "DEU": "Deutschland",
+      "GRC": "Griechenland",
+      "HUN": "Ungarn",
+      "IRL": "Irland",
+      "ITA": "Italien",
+      "LVA": "Lettland",
+      "LTU": "Litauen",
+      "LUX": "Luxemburg",
+      "MLT": "Malta",
+      "NLD": "Niederlande",
+      "POL": "Polen",
+      "PRT": "Portugal",
+      "ROU": "Rumänien",
+      "SVK": "Slowakei",
+      "SVN": "Slowenien",
+      "ESP": "Spanien",
+      "SWE": "Schweden",
+      "CHE": "Schweiz"
     }
   },
   "charts": {
