--- a/locales/en.json
+++ b/locales/en.json
@@ -629,6 +629,49 @@
       "redFlags": "Red flags",
       "greenFlags": "Green flags",
       "switzerland": "Switzerland"
+    },
+    "patternTranslations": {
+      "incorrect consent mode v2": "incorrect Consent Mode v2",
+      "tracking before consent": "tracking before consent",
+      "analytics before consent": "analytics before consent",
+      "missing reject option": "missing reject option",
+      "no equal prominence": "no equal prominence",
+      "no reject-all button": "no Reject‑all button",
+      "dark patterns in consent ui": "dark patterns in consent UI",
+      "dark patterns": "dark patterns",
+      "incomplete policy links": "incomplete policy links",
+      "incomplete vendor disclosures": "incomplete vendor disclosures",
+      "improper legitimate interest": "improper legitimate interest"
+    },
+    "countryLabels": {
+      "AUT": "Austria",
+      "BEL": "Belgium",
+      "BGR": "Bulgaria",
+      "HRV": "Croatia",
+      "CYP": "Cyprus",
+      "CZE": "Czechia",
+      "DNK": "Denmark",
+      "EST": "Estonia",
+      "FIN": "Finland",
+      "FRA": "France",
+      "DEU": "Germany",
+      "GRC": "Greece",
+      "HUN": "Hungary",
+      "IRL": "Ireland",
+      "ITA": "Italy",
+      "LVA": "Latvia",
+      "LTU": "Lithuania",
+      "LUX": "Luxembourg",
+      "MLT": "Malta",
+      "NLD": "Netherlands",
+      "POL": "Poland",
+      "PRT": "Portugal",
+      "ROU": "Romania",
+      "SVK": "Slovakia",
+      "SVN": "Slovenia",
+      "ESP": "Spain",
+      "SWE": "Sweden",
+      "CHE": "Switzerland"
     }
   },
   "charts": {
