--- a/locales/es.json
+++ b/locales/es.json
@@ -548,6 +548,49 @@
       "redFlags": "Banderas rojas",
       "greenFlags": "Banderas verdes",
       "switzerland": "Suiza"
+    },
+    "patternTranslations": {
+      "incorrect consent mode v2": "Consent Mode v2 incorrecto",
+      "tracking before consent": "Rastreo antes del consentimiento",
+      "analytics before consent": "Analytics antes del consentimiento",
+      "missing reject option": "Falta la opción de rechazar",
+      "no equal prominence": "Sin prominencia equivalente",
+      "no reject-all button": "Sin botón Rechazar todo",
+      "dark patterns in consent ui": "Patrones oscuros en la interfaz de consentimiento",
+      "dark patterns": "Patrones oscuros",
+      "incomplete policy links": "Enlaces de políticas incompletos",
+      "incomplete vendor disclosures": "Divulgaciones de proveedores incompletas",
+      "improper legitimate interest": "Interés legítimo inapropiado"
+    },
+    "countryLabels": {
+      "AUT": "Austria",
+      "BEL": "Bélgica",
+      "BGR": "Bulgaria",
+      "HRV": "Croacia",
+      "CYP": "Chipre",
+      "CZE": "Chequia",
+      "DNK": "Dinamarca",
+      "EST": "Estonia",
+      "FIN": "Finlandia",
+      "FRA": "Francia",
+      "DEU": "Alemania",
+      "GRC": "Grecia",
+      "HUN": "Hungría",
+      "IRL": "Irlanda",
+      "ITA": "Italia",
+      "LVA": "Letonia",
+      "LTU": "Lituania",
+      "LUX": "Luxemburgo",
+      "MLT": "Malta",
+      "NLD": "Países Bajos",
+      "POL": "Polonia",
+      "PRT": "Portugal",
+      "ROU": "Rumanía",
+      "SVK": "Eslovaquia",
+      "SVN": "Eslovenia",
+      "ESP": "España",
+      "SWE": "Suecia",
+      "CHE": "Suiza"
     }
   },
   "charts": {
