--- a/locales/fr.json
+++ b/locales/fr.json
@@ -547,6 +547,49 @@
       "redFlags": "Drapeaux rouges",
       "greenFlags": "Drapeaux verts",
       "switzerland": "Suisse"
+    },
+    "patternTranslations": {
+      "incorrect consent mode v2": "Consent Mode v2 incorrect",
+      "tracking before consent": "Suivi avant consentement",
+      "analytics before consent": "Analytics avant consentement",
+      "missing reject option": "Option refuser manquante",
+      "no reject-all button": "Pas de bouton Tout refuser",
+      "dark patterns in consent ui": "Modèles trompeurs dans l'interface de consentement",
+      "dark patterns": "Modèles trompeurs",
+      "no equal prominence": "Absence de mise en avant équivalente",
+      "incomplete policy links": "Liens vers les politiques incomplets",
+      "incomplete vendor disclosures": "Informations fournisseurs incomplètes",
+      "improper legitimate interest": "Intérêt légitime inapproprié"
+    },
+    "countryLabels": {
+      "AUT": "Autriche",
+      "BEL": "Belgique",
+      "BGR": "Bulgarie",
+      "HRV": "Croatie",
+      "CYP": "Chypre",
+      "CZE": "Tchéquie",
+      "DNK": "Danemark",
+      "EST": "Estonie",
+      "FIN": "Finlande",
+      "FRA": "France",
+      "DEU": "Allemagne",
+      "GRC": "Grèce",
+      "HUN": "Hongrie",
+      "IRL": "Irlande",
+      "ITA": "Italie",
+      "LVA": "Lettonie",
+      "LTU": "Lituanie",
+      "LUX": "Luxembourg",
+      "MLT": "Malte",
+      "NLD": "Pays-Bas",
+      "POL": "Pologne",
+      "PRT": "Portugal",
+      "ROU": "Roumanie",
+      "SVK": "Slovaquie",
+      "SVN": "Slovénie",
+      "ESP": "Espagne",
+      "SWE": "Suède",
+      "CHE": "Suisse"
     }
   },
   "charts": {
